if (BUILD_EXAMPLES_DEVICE_TYPE STREQUAL "multiScan100" OR BUILD_EXAMPLES_DEVICE_TYPE STREQUAL "all")
    add_subdirectory(multiScan100)
endif()
if (BUILD_EXAMPLES_DEVICE_TYPE STREQUAL "multiScan200" OR BUILD_EXAMPLES_DEVICE_TYPE STREQUAL "all")
    add_subdirectory(multiScan200)
endif()
if (BUILD_EXAMPLES_DEVICE_TYPE STREQUAL "picoScan100" OR BUILD_EXAMPLES_DEVICE_TYPE STREQUAL "all")
    add_subdirectory(picoScan100)
endif()
if (BUILD_EXAMPLES_DEVICE_TYPE STREQUAL "LRS4000" OR BUILD_EXAMPLES_DEVICE_TYPE STREQUAL "all")
    add_subdirectory(LRS4000)
endif()
